@@ -46,9 +46,8 @@ ADD_EXECUTABLE(frames_to_mj2
   ${OPJ_SRCS}
   ${MJ2_SRCS}
   )
-IF(LCMS_FOUND OR LCMS2_FOUND)
-  TARGET_LINK_LIBRARIES(frames_to_mj2 ${LCMS_LIBNAME})
-ENDIF(LCMS_FOUND OR LCMS2_FOUND)
+TARGET_LINK_LIBRARIES(frames_to_mj2 ${LCMS_LIBNAME})
+
 IF(UNIX)
   TARGET_LINK_LIBRARIES(frames_to_mj2 m)
 ENDIF(UNIX)
@@ -60,9 +59,8 @@ ADD_EXECUTABLE(mj2_to_frames
     ${MJ2_SRCS}
     ${OPENJPEG_SOURCE_DIR}/applications/common/color.c
     )
-IF(LCMS_FOUND OR LCMS2_FOUND)
-  TARGET_LINK_LIBRARIES(mj2_to_frames ${LCMS_LIBNAME})
-ENDIF(LCMS_FOUND OR LCMS2_FOUND)
+TARGET_LINK_LIBRARIES(mj2_to_frames ${LCMS_LIBNAME})
+
 IF(UNIX)
   TARGET_LINK_LIBRARIES(mj2_to_frames m)
 ENDIF(UNIX)
@@ -72,9 +70,8 @@ ADD_EXECUTABLE(extract_j2k_from_mj2
     ${OPJ_SRCS}
     ${MJ2_SRCS}
     )
-IF(LCMS_FOUND OR LCMS2_FOUND)
-  TARGET_LINK_LIBRARIES(extract_j2k_from_mj2 ${LCMS_LIBNAME})
-ENDIF(LCMS_FOUND OR LCMS2_FOUND)
+TARGET_LINK_LIBRARIES(extract_j2k_from_mj2 ${LCMS_LIBNAME})
+
 IF(UNIX)
   TARGET_LINK_LIBRARIES(extract_j2k_from_mj2 m)
 ENDIF(UNIX)
@@ -84,9 +81,8 @@ ADD_EXECUTABLE(wrap_j2k_in_mj2
     ${OPJ_SRCS}
     ${MJ2_SRCS}
     )
-IF(LCMS_FOUND OR LCMS2_FOUND)
-  TARGET_LINK_LIBRARIES(wrap_j2k_in_mj2 ${LCMS_LIBNAME})
-ENDIF(LCMS_FOUND OR LCMS2_FOUND)
+TARGET_LINK_LIBRARIES(wrap_j2k_in_mj2 ${LCMS_LIBNAME})
+
 IF(UNIX)
   TARGET_LINK_LIBRARIES(wrap_j2k_in_mj2 m)
 ENDIF(UNIX)
